--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -18,6 +18,7 @@
     
     <link rel="stylesheet" href="../styles/index.scss" />
     <link rel="shortcut icon" type="image/png" href="../images/favicon.png" />
+    <script src="../../node_modules/jquery/dist/jquery.min.js"></script>
   </head>
   <body>
     <include src="./partials/common/header.html"></include>
